[project]
name = "hellobencher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Peter Byfield", email = "peter.byfield@kraken.tech" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-benchmark>=5.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[tool.pytest.ini_options]
python_functions = ["test_*", "benchmark_*"]